2007-11-22  Murray Cumming,  <murrayc@murrayc.com>

	* examples/consumer-ui.c: (keys_combo_changed_cb), (main):
	Initialize and free GErrors.

2007-11-22  Murray Cumming  <murrayc@murrayc.com>

	* examples/consumer-ui.c: (main): Rename the transport 
	variable to service_type because that is what it is.

2007-11-21  Mathias Hasselmann  <mathias@openismus.com>

	Don't crash on empty publishers.

	* examples/consumer-ui.c: Handle empty publishers.

2007-11-21  Mathias Hasselmann  <mathias@openismus.com>

	Demonstrate browsing for a specific application.

	* examples/consumer-ui.c: Update the example.

2007-11-21  Mathias Hasselmann  <mathias@openismus.com>

	Introduce epc_protocol_from_name.

	* libepc/protocol.c, libepc/protocol.h: Add epc_protocol_from_name.
	* examples/simple-publisher.c: Use epc_protocol_from_name.

2007-11-21  Mathias Hasselmann  <mathias@openismus.com>

	Explain TLS key generation during epc_publisher_run.

	* libepc/publisher.c: Update API docs.

2007-11-21  Mathias Hasselmann  <mathias@openismus.com>

	There is no "reauthenticate" signal anymore in EpcConsumer.

	* libepc/consumer.h: Remove documentation for "reauthenticate".

2007-11-21  Mathias Hasselmann  <mathias@openismus.com>

	Move progress reporting from EpcTls to EpcSell and turn
	EpcProgressWindow into a versatile thing.

	* libepc/shell.c, libepc/shell.h: Add EpcShellProgressHooks,
	epc_shell_set_progress_hooks, epc_shell_progress_begin,
	epc_shell_progress_begin and epc_shell_progress_end.
	* libepc/tls.c, libepc/tls.h: Remove EpcTlsPrivkeyEnterHook,
	EpcTlsPrivkeyLeaveHook and epc_tls_set_private_key_hooks.
	* libepc-ui/progress-window.c, libepc-ui/progress-window.h: Add
	epc_progress_window_update. Support additional arguments for
	epc_progress_window_new and epc_progress_window_install. Use
	epc_shell_set_progress_hooks instead of epc_tls_set_private_key_hooks.
	* Makefile.am: Add tests/test-progress-hooks and declare G_LOG_DOMAIN.